[gd_scene load_steps=10 format=3 uid="uid://d3doh2t8wkdkn"]

[ext_resource type="Script" uid="uid://cots75aqfy6qr" path="res://scn/game.gd" id="1_3rv37"]
[ext_resource type="PackedScene" uid="uid://cpyk8rpskcyai" path="res://scn/road.tscn" id="1_34iaf"]
[ext_resource type="PackedScene" uid="uid://7y4a6g30f21x" path="res://scn/player.tscn" id="3_1cmyj"]
[ext_resource type="PackedScene" uid="uid://bte563f3qutgb" path="res://scn/obst_car_m_1.tscn" id="4_34iaf"]
[ext_resource type="PackedScene" uid="uid://boxwoykf4pxxd" path="res://scn/gui.tscn" id="5_3rv37"]
[ext_resource type="Script" uid="uid://cqq4ki2eo20kt" path="res://scn/spawner.gd" id="5_1224e"]
[ext_resource type="PackedScene" uid="uid://d3h8hxqifgtog" path="res://GameRule.tscn" id="7_ce6nb"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_1cmyj"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_34iaf"]
normal = Vector2(-1, 0)
distance = -756.0

[node name="Game" type="Node2D"]
script = ExtResource("1_3rv37")

[node name="road" parent="." instance=ExtResource("1_34iaf")]

[node name="Player" parent="." instance=ExtResource("3_1cmyj")]
position = Vector2(534, 1830)
motion_mode = 1

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("WorldBoundaryShape2D_1cmyj")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(324, 1)
shape = SubResource("WorldBoundaryShape2D_34iaf")

[node name="obst_car_m_1" parent="." instance=ExtResource("4_34iaf")]
position = Vector2(13.0001, -511)

[node name="Spawner" type="Node2D" parent="."]
script = ExtResource("5_1224e")
object_to_spawn = ExtResource("4_34iaf")

[node name="Timer" type="Timer" parent="Spawner"]
wait_time = 0.4
autostart = true

[node name="SpawnPoint1" type="Marker2D" parent="Spawner"]
position = Vector2(13, -511)

[node name="SpawnPoint2" type="Marker2D" parent="Spawner"]
position = Vector2(238, -511)

[node name="SpawnPoint3" type="Marker2D" parent="Spawner"]
position = Vector2(571, -510)

[node name="SpawnPoint4" type="Marker2D" parent="Spawner"]
position = Vector2(811, -510)

[node name="GUI" parent="." instance=ExtResource("5_3rv37")]

[node name="GameRule" parent="." instance=ExtResource("7_ce6nb")]

[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_timer_timeout"]
